Deprecated/VIPRA/dsl/generated/BehaviorsParser.cpp

// Generated from Behaviors.g4 by ANTLR 4.9.3


#include "BehaviorsVisitor.h"

#include "BehaviorsParser.h"


using namespace antlrcpp;
using namespace antlr4;

BehaviorsParser::BehaviorsParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

BehaviorsParser::~BehaviorsParser() {
  delete _interpreter;
}

std::string BehaviorsParser::getGrammarFileName() const {
  return "Behaviors.g4";
}

const std::vector<std::string>& BehaviorsParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& BehaviorsParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

BehaviorsParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<BehaviorsParser::StatementContext *> BehaviorsParser::ProgramContext::statement() {
  return getRuleContexts<BehaviorsParser::StatementContext>();
}

BehaviorsParser::StatementContext* BehaviorsParser::ProgramContext::statement(size_t i) {
  return getRuleContext<BehaviorsParser::StatementContext>(i);
}


size_t BehaviorsParser::ProgramContext::getRuleIndex() const {
  return BehaviorsParser::RuleProgram;
}


antlrcpp::Any BehaviorsParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BehaviorsVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

BehaviorsParser::ProgramContext* BehaviorsParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, BehaviorsParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(54);
      statement();
      setState(57); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << BehaviorsParser::T__0)
      | (1ULL << BehaviorsParser::T__5)
      | (1ULL << BehaviorsParser::T__7)
      | (1ULL << BehaviorsParser::T__16)
      | (1ULL << BehaviorsParser::T__17)
      | (1ULL << BehaviorsParser::T__18)
      | (1ULL << BehaviorsParser::T__19)
      | (1ULL << BehaviorsParser::T__21)
      | (1ULL << BehaviorsParser::T__22)
      | (1ULL << BehaviorsParser::NUMBER))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

BehaviorsParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BehaviorsParser::ConsiderationContext* BehaviorsParser::StatementContext::consideration() {
  return getRuleContext<BehaviorsParser::ConsiderationContext>(0);
}

BehaviorsParser::StateSelectorContext* BehaviorsParser::StatementContext::stateSelector() {
  return getRuleContext<BehaviorsParser::StateSelectorContext>(0);
}

BehaviorsParser::StateDeclarationContext* BehaviorsParser::StatementContext::stateDeclaration() {
  return getRuleContext<BehaviorsParser::StateDeclarationContext>(0);
}

BehaviorsParser::InitialStateDeclarationContext* BehaviorsParser::StatementContext::initialStateDeclaration() {
  return getRuleContext<BehaviorsParser::InitialStateDeclarationContext>(0);
}

BehaviorsParser::EnvironmentStateDeclarationContext* BehaviorsParser::StatementContext::environmentStateDeclaration() {
  return getRuleContext<BehaviorsParser::EnvironmentStateDeclarationContext>(0);
}

BehaviorsParser::EnvironmentInitialStateDeclarationContext* BehaviorsParser::StatementContext::environmentInitialStateDeclaration() {
  return getRuleContext<BehaviorsParser::EnvironmentInitialStateDeclarationContext>(0);
}

BehaviorsParser::EnvironmentTransitionContext* BehaviorsParser::StatementContext::environmentTransition() {
  return getRuleContext<BehaviorsParser::EnvironmentTransitionContext>(0);
}

BehaviorsParser::StateTransitionElapsedTimeContext* BehaviorsParser::StatementContext::stateTransitionElapsedTime() {
  return getRuleContext<BehaviorsParser::StateTransitionElapsedTimeContext>(0);
}

BehaviorsParser::StateTransitionEnvironmentStateContext* BehaviorsParser::StatementContext::stateTransitionEnvironmentState() {
  return getRuleContext<BehaviorsParser::StateTransitionEnvironmentStateContext>(0);
}

BehaviorsParser::StateActionContext* BehaviorsParser::StatementContext::stateAction() {
  return getRuleContext<BehaviorsParser::StateActionContext>(0);
}


size_t BehaviorsParser::StatementContext::getRuleIndex() const {
  return BehaviorsParser::RuleStatement;
}


antlrcpp::Any BehaviorsParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BehaviorsVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

BehaviorsParser::StatementContext* BehaviorsParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, BehaviorsParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(69);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(59);
      consideration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(60);
      stateSelector();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(61);
      stateDeclaration();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(62);
      initialStateDeclaration();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(63);
      environmentStateDeclaration();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(64);
      environmentInitialStateDeclaration();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(65);
      environmentTransition();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(66);
      stateTransitionElapsedTime();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(67);
      stateTransitionEnvironmentState();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(68);
      stateAction();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConsiderationContext ------------------------------------------------------------------

BehaviorsParser::ConsiderationContext::ConsiderationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BehaviorsParser::ConsiderationContext::ID() {
  return getToken(BehaviorsParser::ID, 0);
}


size_t BehaviorsParser::ConsiderationContext::getRuleIndex() const {
  return BehaviorsParser::RuleConsideration;
}


antlrcpp::Any BehaviorsParser::ConsiderationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BehaviorsVisitor*>(visitor))
    return parserVisitor->visitConsideration(this);
  else
    return visitor->visitChildren(this);
}

BehaviorsParser::ConsiderationContext* BehaviorsParser::consideration() {
  ConsiderationContext *_localctx = _tracker.createInstance<ConsiderationContext>(_ctx, getState());
  enterRule(_localctx, 4, BehaviorsParser::RuleConsideration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(BehaviorsParser::T__0);
    setState(72);
    _la = _input->LA(1);
    if (!(_la == BehaviorsParser::T__1

    || _la == BehaviorsParser::T__2)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(73);
    match(BehaviorsParser::ID);
    setState(74);
    match(BehaviorsParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StateSelectorContext ------------------------------------------------------------------

BehaviorsParser::StateSelectorContext::StateSelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BehaviorsParser::IdRatioSelectorContext* BehaviorsParser::StateSelectorContext::idRatioSelector() {
  return getRuleContext<BehaviorsParser::IdRatioSelectorContext>(0);
}

BehaviorsParser::ExactlyNRandomSelectorContext* BehaviorsParser::StateSelectorContext::exactlyNRandomSelector() {
  return getRuleContext<BehaviorsParser::ExactlyNRandomSelectorContext>(0);
}

BehaviorsParser::RandomIdRatioSelectorContext* BehaviorsParser::StateSelectorContext::randomIdRatioSelector() {
  return getRuleContext<BehaviorsParser::RandomIdRatioSelectorContext>(0);
}

BehaviorsParser::EveryoneSelectorContext* BehaviorsParser::StateSelectorContext::everyoneSelector() {
  return getRuleContext<BehaviorsParser::EveryoneSelectorContext>(0);
}


size_t BehaviorsParser::StateSelectorContext::getRuleIndex() const {
  return BehaviorsParser::RuleStateSelector;
}


antlrcpp::Any BehaviorsParser::StateSelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BehaviorsVisitor*>(visitor))
    return parserVisitor->visitStateSelector(this);
  else
    return visitor->visitChildren(this);
}

BehaviorsParser::StateSelectorContext* BehaviorsParser::stateSelector() {
  StateSelectorContext *_localctx = _tracker.createInstance<StateSelectorContext>(_ctx, getState());
  enterRule(_localctx, 6, BehaviorsParser::RuleStateSelector);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case BehaviorsParser::NUMBER: {
        enterOuterAlt(_localctx, 1);
        setState(76);
        idRatioSelector();
        break;
      }

      case BehaviorsParser::T__5: {
        enterOuterAlt(_localctx, 2);
        setState(77);
        exactlyNRandomSelector();
        break;
      }

      case BehaviorsParser::T__7: {
        enterOuterAlt(_localctx, 3);
        setState(78);
        randomIdRatioSelector();
        break;
      }

      case BehaviorsParser::T__16: {
        enterOuterAlt(_localctx, 4);
        setState(79);
        everyoneSelector();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdRatioSelectorContext ------------------------------------------------------------------

BehaviorsParser::IdRatioSelectorContext::IdRatioSelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BehaviorsParser::IdRatioSelectorContext::NUMBER() {
  return getToken(BehaviorsParser::NUMBER, 0);
}

tree::TerminalNode* BehaviorsParser::IdRatioSelectorContext::ID() {
  return getToken(BehaviorsParser::ID, 0);
}


size_t BehaviorsParser::IdRatioSelectorContext::getRuleIndex() const {
  return BehaviorsParser::RuleIdRatioSelector;
}


antlrcpp::Any BehaviorsParser::IdRatioSelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BehaviorsVisitor*>(visitor))
    return parserVisitor->visitIdRatioSelector(this);
  else
    return visitor->visitChildren(this);
}

BehaviorsParser::IdRatioSelectorContext* BehaviorsParser::idRatioSelector() {
  IdRatioSelectorContext *_localctx = _tracker.createInstance<IdRatioSelectorContext>(_ctx, getState());
  enterRule(_localctx, 8, BehaviorsParser::RuleIdRatioSelector);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(BehaviorsParser::NUMBER);
    setState(83);
    match(BehaviorsParser::T__4);
    setState(84);
    _la = _input->LA(1);
    if (!(_la == BehaviorsParser::T__1

    || _la == BehaviorsParser::T__2)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(85);
    match(BehaviorsParser::ID);
    setState(86);
    match(BehaviorsParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExactlyNRandomSelectorContext ------------------------------------------------------------------

BehaviorsParser::ExactlyNRandomSelectorContext::ExactlyNRandomSelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BehaviorsParser::ExactlyNRandomSelectorContext::NUMBER() {
  return getToken(BehaviorsParser::NUMBER, 0);
}

tree::TerminalNode* BehaviorsParser::ExactlyNRandomSelectorContext::ID() {
  return getToken(BehaviorsParser::ID, 0);
}


size_t BehaviorsParser::ExactlyNRandomSelectorContext::getRuleIndex() const {
  return BehaviorsParser::RuleExactlyNRandomSelector;
}


antlrcpp::Any BehaviorsParser::ExactlyNRandomSelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BehaviorsVisitor*>(visitor))
    return parserVisitor->visitExactlyNRandomSelector(this);
  else
    return visitor->visitChildren(this);
}

BehaviorsParser::ExactlyNRandomSelectorContext* BehaviorsParser::exactlyNRandomSelector() {
  ExactlyNRandomSelectorContext *_localctx = _tracker.createInstance<ExactlyNRandomSelectorContext>(_ctx, getState());
  enterRule(_localctx, 10, BehaviorsParser::RuleExactlyNRandomSelector);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(BehaviorsParser::T__5);
    setState(89);
    match(BehaviorsParser::NUMBER);
    setState(90);
    match(BehaviorsParser::T__6);
    setState(91);
    _la = _input->LA(1);
    if (!(_la == BehaviorsParser::T__1

    || _la == BehaviorsParser::T__2)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(92);
    match(BehaviorsParser::ID);
    setState(93);
    match(BehaviorsParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RandomIdRatioStatementContext ------------------------------------------------------------------

BehaviorsParser::RandomIdRatioStatementContext::RandomIdRatioStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> BehaviorsParser::RandomIdRatioStatementContext::NUMBER() {
  return getTokens(BehaviorsParser::NUMBER);
}

tree::TerminalNode* BehaviorsParser::RandomIdRatioStatementContext::NUMBER(size_t i) {
  return getToken(BehaviorsParser::NUMBER, i);
}

tree::TerminalNode* BehaviorsParser::RandomIdRatioStatementContext::ID() {
  return getToken(BehaviorsParser::ID, 0);
}


size_t BehaviorsParser::RandomIdRatioStatementContext::getRuleIndex() const {
  return BehaviorsParser::RuleRandomIdRatioStatement;
}


antlrcpp::Any BehaviorsParser::RandomIdRatioStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BehaviorsVisitor*>(visitor))
    return parserVisitor->visitRandomIdRatioStatement(this);
  else
    return visitor->visitChildren(this);
}

BehaviorsParser::RandomIdRatioStatementContext* BehaviorsParser::randomIdRatioStatement() {
  RandomIdRatioStatementContext *_localctx = _tracker.createInstance<RandomIdRatioStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, BehaviorsParser::RuleRandomIdRatioStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    match(BehaviorsParser::T__7);
    setState(96);
    match(BehaviorsParser::NUMBER);
    setState(97);
    match(BehaviorsParser::T__8);
    setState(98);
    match(BehaviorsParser::NUMBER);
    setState(99);
    match(BehaviorsParser::T__9);
    setState(100);
    _la = _input->LA(1);
    if (!(_la == BehaviorsParser::T__1

    || _la == BehaviorsParser::T__2)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(101);
    match(BehaviorsParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RandomIdRatioSelectorContext ------------------------------------------------------------------

BehaviorsParser::RandomIdRatioSelectorContext::RandomIdRatioSelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t BehaviorsParser::RandomIdRatioSelectorContext::getRuleIndex() const {
  return BehaviorsParser::RuleRandomIdRatioSelector;
}

void BehaviorsParser::RandomIdRatioSelectorContext::copyFrom(RandomIdRatioSelectorContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- NoGroupRandomIdSelectorContext ------------------------------------------------------------------

BehaviorsParser::RandomIdRatioStatementContext* BehaviorsParser::NoGroupRandomIdSelectorContext::randomIdRatioStatement() {
  return getRuleContext<BehaviorsParser::RandomIdRatioStatementContext>(0);
}

BehaviorsParser::NoGroupRandomIdSelectorContext::NoGroupRandomIdSelectorContext(RandomIdRatioSelectorContext *ctx) { copyFrom(ctx); }


antlrcpp::Any BehaviorsParser::NoGroupRandomIdSelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BehaviorsVisitor*>(visitor))
    return parserVisitor->visitNoGroupRandomIdSelector(this);
  else
    return visitor->visitChildren(this);
}
//----------------- GroupingRandomIdSelectorContext ------------------------------------------------------------------

BehaviorsParser::RandomIdRatioStatementContext* BehaviorsParser::GroupingRandomIdSelectorContext::randomIdRatioStatement() {
  return getRuleContext<BehaviorsParser::RandomIdRatioStatementContext>(0);
}

tree::TerminalNode* BehaviorsParser::GroupingRandomIdSelectorContext::ID() {
  return getToken(BehaviorsParser::ID, 0);
}

BehaviorsParser::GroupingRandomIdSelectorContext::GroupingRandomIdSelectorContext(RandomIdRatioSelectorContext *ctx) { copyFrom(ctx); }


antlrcpp::Any BehaviorsParser::GroupingRandomIdSelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BehaviorsVisitor*>(visitor))
    return parserVisitor->visitGroupingRandomIdSelector(this);
  else
    return visitor->visitChildren(this);
}
BehaviorsParser::RandomIdRatioSelectorContext* BehaviorsParser::randomIdRatioSelector() {
  RandomIdRatioSelectorContext *_localctx = _tracker.createInstance<RandomIdRatioSelectorContext>(_ctx, getState());
  enterRule(_localctx, 14, BehaviorsParser::RuleRandomIdRatioSelector);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(111);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<BehaviorsParser::NoGroupRandomIdSelectorContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(103);
      randomIdRatioStatement();
      setState(104);
      match(BehaviorsParser::T__3);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<BehaviorsParser::GroupingRandomIdSelectorContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(106);
      randomIdRatioStatement();
      setState(107);
      match(BehaviorsParser::T__10);
      setState(108);
      match(BehaviorsParser::ID);
      setState(109);
      match(BehaviorsParser::T__3);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConditionElapsedTimeContext ------------------------------------------------------------------

BehaviorsParser::ConditionElapsedTimeContext::ConditionElapsedTimeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BehaviorsParser::ConditionElapsedTimeContext::NUMBER() {
  return getToken(BehaviorsParser::NUMBER, 0);
}


size_t BehaviorsParser::ConditionElapsedTimeContext::getRuleIndex() const {
  return BehaviorsParser::RuleConditionElapsedTime;
}


antlrcpp::Any BehaviorsParser::ConditionElapsedTimeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BehaviorsVisitor*>(visitor))
    return parserVisitor->visitConditionElapsedTime(this);
  else
    return visitor->visitChildren(this);
}

BehaviorsParser::ConditionElapsedTimeContext* BehaviorsParser::conditionElapsedTime() {
  ConditionElapsedTimeContext *_localctx = _tracker.createInstance<ConditionElapsedTimeContext>(_ctx, getState());
  enterRule(_localctx, 16, BehaviorsParser::RuleConditionElapsedTime);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    match(BehaviorsParser::T__11);
    setState(114);
    match(BehaviorsParser::NUMBER);
    setState(115);
    match(BehaviorsParser::T__12);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConditionEnvironmentStateContext ------------------------------------------------------------------

BehaviorsParser::ConditionEnvironmentStateContext::ConditionEnvironmentStateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BehaviorsParser::ConditionEnvironmentStateContext::ID() {
  return getToken(BehaviorsParser::ID, 0);
}


size_t BehaviorsParser::ConditionEnvironmentStateContext::getRuleIndex() const {
  return BehaviorsParser::RuleConditionEnvironmentState;
}


antlrcpp::Any BehaviorsParser::ConditionEnvironmentStateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BehaviorsVisitor*>(visitor))
    return parserVisitor->visitConditionEnvironmentState(this);
  else
    return visitor->visitChildren(this);
}

BehaviorsParser::ConditionEnvironmentStateContext* BehaviorsParser::conditionEnvironmentState() {
  ConditionEnvironmentStateContext *_localctx = _tracker.createInstance<ConditionEnvironmentStateContext>(_ctx, getState());
  enterRule(_localctx, 18, BehaviorsParser::RuleConditionEnvironmentState);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    _la = _input->LA(1);
    if (!(_la == BehaviorsParser::T__13

    || _la == BehaviorsParser::T__14)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(118);
    match(BehaviorsParser::T__15);
    setState(119);
    match(BehaviorsParser::ID);
    setState(120);
    match(BehaviorsParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EveryoneSelectorContext ------------------------------------------------------------------

BehaviorsParser::EveryoneSelectorContext::EveryoneSelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BehaviorsParser::EveryoneSelectorContext::ID() {
  return getToken(BehaviorsParser::ID, 0);
}


size_t BehaviorsParser::EveryoneSelectorContext::getRuleIndex() const {
  return BehaviorsParser::RuleEveryoneSelector;
}


antlrcpp::Any BehaviorsParser::EveryoneSelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BehaviorsVisitor*>(visitor))
    return parserVisitor->visitEveryoneSelector(this);
  else
    return visitor->visitChildren(this);
}

BehaviorsParser::EveryoneSelectorContext* BehaviorsParser::everyoneSelector() {
  EveryoneSelectorContext *_localctx = _tracker.createInstance<EveryoneSelectorContext>(_ctx, getState());
  enterRule(_localctx, 20, BehaviorsParser::RuleEveryoneSelector);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    match(BehaviorsParser::T__16);
    setState(123);
    _la = _input->LA(1);
    if (!(_la == BehaviorsParser::T__1

    || _la == BehaviorsParser::T__2)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(124);
    match(BehaviorsParser::ID);
    setState(125);
    match(BehaviorsParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EnvironmentStateDeclarationContext ------------------------------------------------------------------

BehaviorsParser::EnvironmentStateDeclarationContext::EnvironmentStateDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BehaviorsParser::EnvironmentStateDeclarationContext::ID() {
  return getToken(BehaviorsParser::ID, 0);
}


size_t BehaviorsParser::EnvironmentStateDeclarationContext::getRuleIndex() const {
  return BehaviorsParser::RuleEnvironmentStateDeclaration;
}

